@@ -1,8 +1,10 @@
 Version 2.2
 
 o -keep-l keeps existing linearization status
-o -remove-dict-entry te remove the contents of a dictionary entry
+o -remove-dict-entry to remove the contents of a dictionary entry
 o -topline in addition to -midline
+o -producer and -creator may be used to alter producer and creator
+in conjunction with any other operation
 
 Version 2.1 (November 2014)
 
